redroom/pym/gathio/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gathio-deployment
  labels:
    app: gathio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gathio
  template:
    metadata:
      name: gathio-template
      labels:
        app: gathio
    spec:
      volumes:
        - name: gathio-storage
          persistentVolumeClaim:
            claimName: gathio-pvc
        - name: config-volume
          configMap:
            name: gathio-config
        - name: gathio-db-storage
          persistentVolumeClaim:
            claimName: gathio-db-pvc
      containers:
          - name: gathio-container
            image: ghcr.io/lowercasename/gathio:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 443
            volumeMounts:
              - name: config-volume
                mountPath: /app/config/config.toml
                subPath: config.toml
              - name: gathio-storage
                mountPath: /app/static
                subPath: static
              - name: gathio-storage
                mountPath: /app/public/events
                subPath: images
          - name: gathio-db
            image: mongo:latest
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 27017
            volumeMounts:
              - name: gathio-db-storage
                mountPath: /data/db
