redroom/pym/gathio/base/gathio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gathio-svc
  namespace: pym
  labels:
    app: gathio
spec:
  selector:
    app: gathio
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  type: ClusterIP
