redroom/pym/gathio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gathio-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: events.maximstroud.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gathio-svc
                port:
                  number: 80
  tls:
    - hosts:
        - events.maximstroud.de
      secretName: maximstroud.de-cert
